Some refactoring changes in cell player and time. Minor formatting fixes. Code cleanup